<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NativeNavs</string>
    <string name="hello_blank_fragment">hello</string>

    <!-- 네비 메뉴 명 -->
    <string name="nav_user_tour">투어</string>
    <string name="nav_trav_wishlist">위시리스트</string>
    <string name="nav_trav_trip">내 여행</string>
    <string name="nav_navs_new_tour">투어 작성</string>
    <string name="nav_navs_booking">예약</string>
    <string name="nav_user_chat">채팅</string>
    <string name="nav_user_profile">프로필</string>

    <!-- 상단 바 Title -->
    <string name="app_bar_tour_detail">투어상세</string>
    <string name="app_bar_tour_register">투어작성</string>
    <string name="app_bar_tour_modify">투어수정</string>
    <string name="app_bar_review">리뷰</string>
    <string name="app_bar_review_photos">사진 전체보기</string>
    <string name="app_bar_review_register">리뷰작성</string>
    <string name="app_bar_profile">프로필</string>
    <string name="app_bar_profile_modify">수정</string>
    <string name="app_bar_my_trip_reservation_list">예약목록</string>
    <string name="app_bar_my_trip_list">나의 투어목록</string>

    <string name="tour_wish_list_title">WishList</string>

    <!--마이페이지-->
    <string name="mypage_title">프로필</string>
    <string name="mypage_setting_title">환경 설정</string>
    <string name="mypage_logout">로그아웃</string>
    <string name="mypage_setting">설정</string>
    <string name="mypage_team">NativeNavs 소개</string>
    <string name="mypage_tos">개인 정보 약관</string>
    <string name="mypage_password">비밀번호 변경</string>
    <string name="mypage_withdrawal">회원탈퇴</string>

    <!--profile-->
    <string name="profile_myreview">내가 남긴 리뷰</string>
    <string name="profile_mystamp">나의 스탬프</string>
    <string name="profile_modify_update_btn">수정 완료</string>
    <string name="profile_nation">거주지:</string>
    <string name="profile_user_language">언어:</string>
    <string name="profile_user_use">이용횟수:</string>
    <string name="profile_password_message">비밀번호 양식을 확인해주세요</string>
    <string name="profile_password_check_message">비밀번호를 정확하게 기입해주세요</string>
    <string name="profile_nickname_check">닉네임 중복 확인 버튼을 눌러주세요</string>
    <string name="profile_pw_help">프로필만 바꾸고 싶다면 현재 비밀번호를 입력해주세요\n알파벳, 소문자, 특수문자를 섞어서 8~20자리 입력해 주세요.</string>

    <!--sign-->
    <string name="sign_next">다음</string>
    <string name="sign_email">이메일</string>
    <string name="sign_pw">비밀번호</string>
    <string name="sign_pw_check">비밀번호 재입력</string>
    <string name="sign_login">로그인</string>
    <string name="sign_google_login">구글 계정으로 로그인</string>
    <string name="sign_login_not_user">아직 회원이 아니신가요?</string>
    <string name="sign_login_signup"><u>회원가입</u></string>
    <string name="sign_email_signup">이메일로 회원가입</string>
    <string name="sign_google_signup">구글 계정으로 회원가입</string>
    <string name="sign_send">전송</string>
    <string name="sign_code">코드 번호</string>
    <string name="sign_email_valid">이메일 형식이 맞지 않습니다.</string>
    <string name="sign_code_help">만약 코드 번호가 오지 않았거나 재전송이 필요하시면\n코드 번호 재전송을 요청해 주세요.</string>
    <string name="sign_auth">인증</string>
    <string name="sign_pw_help">해당 계정에 대한 비밀번호를 입력해 주세요.\n알파벳, 소문자, 특수문자를 섞어서 8~20자리 입력해 주세요.</string>
    <string name="sign_pw_valid">비밀번호 형식을 다시 확인해주세요.\n알파벳, 소문자, 특수문자를 섞어서 8~20자리 입력해 주세요.</string>
    <string name="sign_pw_check_help">위에서 입력한 비밀번호를 다시 입력해 주세요.</string>
    <string name="sign_pw_check_valid">비밀번호가 일치 하지 않습니다. 다시 입력해주세요.</string>
    <string name="sign_welcome">환영합니다!</string>
    <string name="sign_your_type">당신의 방향은?</string>
    <string name="sign_type_nav">Nav</string>
    <string name="sign_type_nav_explain">가이드</string>
    <string name="sign_type_trav">Trav</string>
    <string name="sign_type_trav_explain">여행자</string>
    <string name="sign_nickname">닉네임</string>
    <string name="sign_photo">프로필 사진</string>
    <string name="sign_nickname_check">중복 확인</string>
    <string name="sign_nickname_help">NativeNavs에 표시할 닉네임을 4~20자리 영어 및 숫자로 입력해 주세요.\n이미 사용된 닉네임은 사용 불가능합니다.</string>
    <string name="sign_nationality">국가</string>
    <string name="sign_languages">구사 언어 선택</string>
    <string name="sign_name">이름</string>
    <string name="sign_name_help">정부 발급 신분증에 기재된 이름과 일치하게 작성해 주세요.</string>
    <string name="sign_birth">생년월일</string>
    <string name="sign_phone">전화번호</string>
    <string name="sign_phone_help">숫자로만 입력해주세요.</string>
    <string name="sign_terms"><u>서비스 이용 약관 및 개인정보 수집 약관</u>에 동의합니다.</string>
    <string name="sign_register">등록 완료</string>
    <string name="sign_language_help">최대 3개까지 선택 가능합니다.</string>
    <string name="sign_check">확인</string>
    <string name="sign_complete">회원가입 완료!</string>
    <string name="sign_complete_welcome">가입하신 것을 축하합니다!\n당신의 여행을 NativeNavs가 함께하겠습니다.</string>
    <string name="sign_move_to_main">메인으로 이동</string>
    <string name="sign_useable_nickname">사용 가능한 닉네임 입니다</string>
    <string name="sign_already_exist_nickname">이미 존재하는 닉네임 입니다</string>
    <string name="sign_check_nickname_btn">중복 확인을 해주세요</string>
    <string name="sign_check_name">이름을 입력해주세요</string>
    <string name="sign_check_birth">생년월일을 확인해주세요</string>
    <string name="sign_check_phone">전화번호를 입력해주세요</string>

    <!--tourList-->
    <string name="search_bar_title">원하는 Travel이 있나요?</string>
    <string name="search_bar_content">검색을 해서 다양한 Navs를 찾아보세요</string>

    <!--tour detail-->
    <string name="tour_detail_chat">1:1 문의하기</string>
    <string name="tour_detail_reservation">예약현황</string>

    <!--booking-->
    <string name="booking_page_title">예약하기</string>
    <string name="booking_detail_page_title">예약 상세보기</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--setting-->
    <string name="setting_language">언어</string>
    <string name="setting_language_help">앱에 사용될 언어를 선택해주세요.</string>
    <string name="setting_noti">알림</string>
    <string name="setting_noti_help">예약, 메시지, 계정 활동에 관한 중요한 알림을 받아보세요.</string>

    <!--tos-->
    <string name="tos_title">개인정보 취급 방침</string>

    <!--team-->
    <string name="team_title">Circus 소개</string>

    <!--notification-->
    <string name="noti_title">알림</string>
    <string name="noti_empty_content">새로운 알림이 오면 여기에 표시됩니다.</string>

    <!--reservation-->
    <string name="reservation_register_title">예약하기</string>
    <string name="reservation_detail_title">예약 상세보기</string>

    <!--chat-->
    <string name="chat_list_title">채팅</string>
    <string name="video_call">화상통화</string>
    <string name="booking">예약하기</string>
    <string name="profile_other_trav_review">님이 남긴 리뷰</string>
    <string name="profile_other_nav_review">님의 리뷰</string>
    <string name="profile_other_stamp">님의 스탬프</string>
    <string name="profile_other_myreview">나의 리뷰</string>
    <string name="chat_list_no_message_title">메세지가 없습니다</string>
    <string name="chat_list_no_message_content">새로운 메세지를 받으면 여기에 표시됩니다</string>

    <!--search bar-->
    <string name="search_title_travel">여행</string>
    <string name="search_title_date">날짜</string>
    <string name="search_title_travel_tv">여행지를 알려주세요</string>
    <string name="search_title_popular_travel_tv">인기 여행지</string>
    <string name="search_title_travel_seoul_btn">서울</string>
    <string name="search_title_travel_Incheon_btn">인천</string>
    <string name="search_title_travel_Daegu_btn">대구</string>
    <string name="search_title_travel_Daejeon_btn">대전</string>
    <string name="search_title_travel_Gwangju_btn">광주</string>
    <string name="search_title_travel_Busan_btn">부산</string>
    <string name="search_title_travel_Jeju_btn">제주</string>
    <string name="search_title_theme">테마</string>
    <string name="search_title_theme_tv">테마를 선택하세요</string>
    <string name="search_reset_btn">초기화</string>
    <string name="search_search_btn">검색</string>
    <!--dialog-->
    <string name="dialog_cancel_register_tour">투어 작성을 종료하시겠습니까?</string>
    <string name="dialog_cancel_register_reservation">예약 작성을 종료하시겠습니까?</string>
    <string name="dialog_cancel_modify_tour">투어 수정을 종료하시겠습니까?</string>
    <string name="dialog_cancel_register_review">리뷰 작성을 종료하시겠습니까?</string>
    <string name="dialog_register_tour_negative">계속 작성</string>
    <string name="dialog_register_tour_positive">종료</string>
    <string name="dialog_register_fail">투어 등록에 실패하였습니다. 다시 시도해주세요.</string>
    <string name="dialog_modify_fail">투어 수정에 실패하였습니다. 다시 시도해주세요.</string>
    <string name="dialog_register_review_fail">리뷰 등록에 실패하였습니다. 다시 시도해주세요.</string>
    <string name="dialog_register_reservation_fail">예약 등록에 실패하였습니다. 다시 시도해주세요.</string>
    <string name="dialog_confirm">확인</string>
    <string name="dialog_cancel_reservation_tour">예약 등록을 종료하시겠습니까?</string>
    <string name="dialog_pass_title">비밀번호 입력</string>
    <string name="dialog_pass_content">비밀번호를 입력해주세요</string>
    <string name="dialog_user_delete_title">회원 탈퇴</string>
    <string name="dialog_user_delete_content">정말로 회원 탈퇴를 하시겠습니까</string>
    <string name="dialog_ok_btn">확인</string>
    <string name="dialog_cancel_btn">취소</string>


    <!--etc-->
    <string name="success">성공</string>
    <string name="fail">실패</string>
    <string name="reservation_review_btn">리뷰작성</string>
    <string name="reservation_done">스탬프가 발급되었습니다!</string>
    <string name="reservation_fail">인증을 다시 도해주세요</string>
    <string name="profile_empty_review">등록된 리뷰가 없어요</string>
    <string name="profile_empty_stamp">발급된 스탬프가 없어요</string>
    <string name="noti_empty">알림이 없습니다</string>
    <string name="stamp">스탬프</string>
    <string name="search_check">선택</string>
    <string name="search_cancel"><u>취소</u></string>
    <string name="stamp_detail_empty">스탬프가 없습니다</string>
    <string name="stamp_detail_empty_content">새로운 활동을 통해 스탬프를 모아보세요</string>
    <string name="tour_detail_booking_help">Nav와의 대화를 통해 투어를 예약해보세요!</string>
</resources>