<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_homeFragment"
        android:icon="@drawable/icon_search"
        android:title="@string/nav_user_tour"
        android:enabled="true"
        />
    <item
        android:id="@+id/menu_wishlistFragment"
        android:icon="@drawable/icon_wishlists"
        android:title="@string/nav_trav_wishlist"
        />
    <item
        android:id="@+id/menu_tripFragment"
        android:icon="@drawable/icon_trips"
        android:title="@string/nav_trav_trip"
        />
    <item
        android:id="@+id/menu_chatFragment"
        android:icon="@drawable/icon_chat"
        android:title="@string/nav_user_chat"
        />
    <item
        android:id="@+id/menu_profileFragment"
        android:icon="@drawable/icon_profile"
        android:title="@string/nav_user_profile"
        />
</menu>