<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.mypage.PasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/password_title"
            layout="@layout/layout_title_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleText="@string/mypage_password" />


        <TextView
            android:id="@+id/password_tv"
            style="@style/title_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_title_et"
            android:layout_marginTop="30dp"
            android:text="@string/sign_pw"
            app:layout_constraintStart_toStartOf="@id/password_et"
            app:layout_constraintTop_toBottomOf="@+id/password_title" />

        <EditText
            android:id="@+id/password_et"
            style="@style/et_default"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal_page"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_tv" />

        <TextView
            android:id="@+id/pw_help_tv"
            style="@style/content_help"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_start_title_et"
            android:text="@string/profile_pw_help"
            app:layout_constraintEnd_toEndOf="@+id/password_et"
            app:layout_constraintStart_toStartOf="@id/password_et"
            app:layout_constraintTop_toBottomOf="@+id/password_et" />

        <TextView
            android:id="@+id/password_check_tv"
            style="@style/title_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_title_et"
            android:layout_marginTop="20dp"
            android:text="@string/sign_pw_check"
            app:layout_constraintStart_toStartOf="@id/pw_help_tv"
            app:layout_constraintTop_toBottomOf="@+id/pw_help_tv" />

        <EditText
            android:id="@+id/password_check_et"
            style="@style/et_default"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal_page"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_check_tv" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/password_complete_btn"
            style="@style/btn_long_blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/profile_modify_update_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>