<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.signup.SignUpProfileFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/signup_profile_img_cv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/signup_profile_img_iv"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@tools:sample/avatars" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/signup_nickname_tv"
                style="@style/title_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_title_et"
                android:layout_marginTop="20dp"
                android:text="@string/sign_nickname"
                app:layout_constraintStart_toStartOf="@id/signup_nickname_et"
                app:layout_constraintTop_toBottomOf="@id/signup_profile_img_cv" />

            <EditText
                android:id="@+id/signup_nickname_et"
                style="@style/et_default"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_horizontal_page"
                android:layout_marginEnd="0dp"
                android:maxLength="20"
                android:maxLines="1"
                app:layout_constraintEnd_toStartOf="@+id/signup_nickname_check_btn"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signup_nickname_tv" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signup_nickname_check_btn"
                style="@style/btn_short_blue"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="@dimen/margin_horizontal_page"
                android:paddingHorizontal="10dp"
                android:text="@string/sign_nickname_check"
                app:layout_constraintBottom_toBottomOf="@+id/signup_nickname_et"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/signup_nickname_et"
                app:layout_constraintTop_toTopOf="@+id/signup_nickname_et" />

            <TextView
                android:id="@+id/signup_nickname_help_tv"
                style="@style/content_help"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_start_title_et"
                android:text="@string/sign_nickname_help"
                app:layout_constraintEnd_toEndOf="@id/signup_nickname_check_btn"
                app:layout_constraintStart_toStartOf="@id/signup_nickname_et"
                app:layout_constraintTop_toBottomOf="@+id/signup_nickname_et" />


            <TextView
                android:id="@+id/signup_name_tv"
                style="@style/title_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_title_et"
                android:layout_marginTop="20dp"
                android:text="@string/sign_name"
                app:layout_constraintStart_toStartOf="@id/signup_name_et"
                app:layout_constraintTop_toBottomOf="@id/signup_nickname_help_tv" />

            <EditText
                android:id="@+id/signup_name_et"
                style="@style/et_default"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal_page"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signup_name_tv" />

            <TextView
                android:id="@+id/signup_name_help_tv"
                style="@style/content_help"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_start_title_et"
                android:text="@string/sign_name_help"
                app:layout_constraintEnd_toEndOf="@id/signup_name_et"
                app:layout_constraintStart_toStartOf="@id/signup_name_et"
                app:layout_constraintTop_toBottomOf="@+id/signup_name_et" />

            <TextView
                android:id="@+id/signup_birth_tv"
                style="@style/title_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_title_et"
                android:layout_marginTop="20dp"
                android:text="@string/sign_birth"
                app:layout_constraintStart_toStartOf="@id/signup_birth_et"
                app:layout_constraintTop_toBottomOf="@id/signup_name_help_tv" />

            <EditText
                android:id="@+id/signup_birth_et"
                style="@style/et_default"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal_page"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signup_birth_tv" />

            <TextView
                android:id="@+id/signup_phone_tv"
                style="@style/title_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_title_et"
                android:layout_marginTop="20dp"
                android:text="@string/sign_phone"
                app:layout_constraintStart_toStartOf="@id/signup_name_et"
                app:layout_constraintTop_toBottomOf="@id/signup_birth_et" />

            <EditText
                android:id="@+id/signup_phone_et"
                style="@style/et_default"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal_page"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signup_phone_tv" />

            <TextView
                android:id="@+id/signup_phone_help_tv"
                style="@style/content_help"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_start_title_et"
                android:text="@string/sign_phone_help"
                app:layout_constraintEnd_toEndOf="@id/signup_phone_et"
                app:layout_constraintStart_toStartOf="@id/signup_phone_et"
                app:layout_constraintTop_toBottomOf="@+id/signup_phone_et" />

            <CheckBox
                android:id="@+id/signup_terms_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal_page"
                android:padding="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signup_phone_help_tv" />

            <TextView
                android:id="@+id/signup_terms_tv"
                style="@style/content_help"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_start_title_et"
                android:text="@string/sign_terms"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/signup_terms_cb"
                app:layout_constraintTop_toTopOf="@id/signup_terms_cb" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>